--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "express-validator": "^6.15.0",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.6.0"
+    "socket.io": "^4.6.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
