--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.6.0",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
